[tool.flit.metadata]
module = "jrnl"
author = "Manuel Ebert"
author-email = "manuel@1450.me"
maintainer = "Jonathan Wren and Micah Ellison"
maintainer-email = "jrnl-sh@googlegroups.com"
license = "GPL-3.0-only"
description-file = "README.md"
home-page = "https://jrnl.sh"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.7,<3.10"
requires = [
	"pyxdg>=0.27.0,<0.28.0",
	"cryptography>=3.0,<4.0",
	"passlib>=1.7,<2.0",
	"parsedatetime>=2.4,<3.0",
	"keyring>19.0,<22.0",
	"pytz>=2019.1,<2021.0",
	"tzlocal>1.5,<3.0",
	"asteval>=0.9.14,<0.10.0",
	"colorama>=0.4.1,<0.5.0",
	"python-dateutil>=2.8,<3.0",
	"pyyaml>=5.1,<6.0",
	"ansiwrap>=0.8.4,<0.9.0",
	"packaging>=20.4,<21.0"
]

[tool.flit.scripts]
jrnl = 'jrnl.cli:cli'

[tool.isort]
multi_line_output = 7
force_single_line = true
line_length = 88
known_first_party = ["jrnl"]
force_sort_within_sections = true

[build-system]
requires = [
	"flit_core>=2,<4",
	"behave>=1.2,<2.0",
	"mkdocs>=1.0,<2.0",
	"black>=20.8b1,<21",
	"toml>=0.10.0,<0.11.0",
	"pyflakes>=2.2.0,<3.0.0",
	"pytest>=6.1.2,<7.0.0",
	"yq>=2.11.1,<3.0.0"
]
build-backend = "flit_core.buildapi"
